fix: ensure that input[type=number] cannot overflow the stage on narrow window

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -295,6 +295,7 @@
 
     input[type='number'] {
       width: auto;
+      max-width: 100%;
     }
 
     input[type='color'] {
